      archives and local database information.  The interface should not
      yet be considered stable.
    - Python implementation of lbs-util now includes most of the
      features of the Perl implementation, plus some other new features.
      The Perl library and utility are deprecated, and will be removed
      in the future.

0.4 [2007-08-24]
    - Documentation improvements: a getting started README, and a
      description of some of the implementation details.
    - Include an example filter script, lbs-filter-gpg, for encrypting
      segment data as it is written.
    - Add support for signed snapshot descriptor files (via the
      --signature-filter option).  Due to the checksums contained in the
      snapshot descriptor, the signature covers the entire contents of
      the snapshot.
    - Preview release of lbs-util.py, a Python-based program for
      managing LBS snapshots.  It currently implements a very simple
      form of automatic segment cleaning, though this isn't much tested.
    - Improved segment repacking support; after cleaning segments,
      objects can be written out in different groups based on age.  This
      may help with long-term segment cleaning efficiency, but probably
      needs more tuning.

0.3 [2007-08-10]
    - LOCAL DATABASE CHANGE: A checksums file is now written out along
      with the snapshot descriptor that contains checksums of segments
      used in a snapshot.  This will allow quick integrity checks of a
      snapshot, without needing to decompress or decrypt the segment
      files.  The local database schema was modified to store the
      checksums for segments.
    - Build dependence on libtar has been dropped.  All necessary
      support for writing TAR files is now directly included with the
      source.
    - The snapshot format is now documented, at least in part.  See
      format.txt.
    - Snapshots now include link count and inode number for files with